# storywriter

./: .env.template  .gitignore  PHASE_4_TODO.md  PRD.md  PROJECT_STATUS.md  README.md  hello.py  main.py  pyproject.toml
.claude/: settings.local.json
config/: llm_config.yaml  style_guide.yaml  world_seed.yaml
docs/: PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md  PRE_FLIGHT_CHECKLIST.md  QUICKSTART.md  SETUP.md
src/story_writer/: __init__.py
src/story_writer/checker/: __init__.py  continuity_checker.py  quality_checker.py
src/story_writer/interface/: __init__.py
src/story_writer/memory/: __init__.py  json_store.py  smart_retrieval.py  vector_store.py
src/story_writer/models/: __init__.py  arc.py  chapter.py  character.py  checker.py  memory.py  thread.py  tracker.py  world.py
src/story_writer/planner/: __init__.py  chapter_planner.py
src/story_writer/updater/: __init__.py  state_updater.py
src/story_writer/utils/: __init__.py  config.py  llm_client.py
src/story_writer/writer/: __init__.py  chapter_reviser.py  chapter_writer.py
tests/: __init__.py  test_chapter_planner.py  test_chapter_writer.py  test_llm_connection.py  test_memory_store.py  test_phase2_integration.py  test_phase3_integration.py  test_setup.py  test_thread_deduplication.py
